# kidsgpt

./: .gitignore  README.md
client/: app.yaml  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.js  index.css
server/: app.yaml  main.py  pyproject.toml  requirements.txt  ws.ipynb  ws.py
