[tool.poetry]
name = "knowitall-server"
version = "0.1.0"
description = "backend"
authors = ["Yoni Gottesman <yonigo10@gmail.com>"]
readme = "README.md"
packages = [{include = "knowitall_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
black = "^23.3.0"
isort = "^5.12.0"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
openai = "^0.27.4"
google-cloud-texttospeech = "^2.14.1"
ipykernel = "^6.22.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
